--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
         <ion-row>
           <ion-col size-lg="2" offset-lg="4" size-md="2" offset-md="4" size-sm="2" offset-sm="4">
             <ion-menu-toggle>
-              <ion-thumbnail routerLink="/places/tabs/offers/p1" >
+              <ion-thumbnail>
                 <ion-img src="https://cdn-icons-png.flaticon.com/512/265/265674.png"></ion-img>
               </ion-thumbnail> 
               </ion-menu-toggle>
