--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -6,7 +6,7 @@
 </ion-header>
 
 <ion-content>
-<ion-text><p>Time kept simple</p></ion-text>
+<!-- <ion-text><p>Time kept simple</p></ion-text> -->
   <form #f="ngForm" (ngSubmit)="onSubmit(f)">
     <ion-grid>
       <ion-row>
