--- a/src/app/auth/auth.page.scss
+++ b/src/app/auth/auth.page.scss
@@ -36,7 +36,7 @@ p {
   text-align: center;
   font-size: 19px;
   padding-top: 50px;
-  color: #af3c3c;
+  color: #000000;
 }
 
 ion-item ion-label {
