--- a/src/app/places/offers/offers.page.scss
+++ b/src/app/places/offers/offers.page.scss
@@ -11,3 +11,11 @@ h2 {
   color: var(--ion-color-primary);
 }
 
+/* Custom Skeleton Line Height and Margin */
+.custom-skeleton ion-skeleton-text {
+  line-height: 13px;
+}
+
+.custom-skeleton ion-skeleton-text:last-child {
+  margin-bottom: 5px;
+}
