--- a/src/app/places/discover/place-detail/place-detail.page.html
+++ b/src/app/places/discover/place-detail/place-detail.page.html
@@ -3,10 +3,13 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/places/tabs/discover"></ion-back-button>
     </ion-buttons>
+    
+    
     <ion-title> {{ isLoading ? 'Loading...' : job.businessName }} </ion-title>
-    <ion-buttons slot="primary" >
-      <ion-button (click)="onDeleteJob(job.id)" *ngIf="isAdmin(true)">
-        <ion-icon name="close-circle-outline" slot="icon-only"></ion-icon>
+    <!-- ngIf="isAdmin(true)" -->
+    <ion-buttons slot="primary" *ngIf="isAdmin(true)">
+      <ion-button (click)="onDeleteJob(job.id)">
+        <ion-icon name="trash-outline" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
@@ -14,70 +17,72 @@
 
 <ion-content >
   <ion-grid class="ion-padding" *ngIf="!isLoading">
-  <div >
-  <ion-row>
-      <ion-col size-sm="6" offset-sm="3">
-          <ion-img [src]="job.imageUrl"></ion-img>
-      </ion-col>  
-  </ion-row>  
-  </div>
-  
-  <ion-row>
-    <ion-col size-sm="6" offset-sm="3">     
-      <ion-card-content>
-        <ion-card>
-          <div class="ion-text-center" *ngIf="isLoading">
-          <ion-spinner color="primary"></ion-spinner>
-          </div >
-          <div style="display: contents;" class="ion-padding">      
-            <ion-toolbar><ion-text>Contact Information</ion-text></ion-toolbar>
-              <p class="ion-text-left" > &nbsp; Location Name</p>
-            <ion-item>
-              <ion-card-subtitle>{{ job.businessName }}</ion-card-subtitle>
-            </ion-item> 
-            <p class="ion-text-left" > &nbsp; Email</p>
-            <ion-item>
-              <ion-card-subtitle>{{ job.emailAddress }}</ion-card-subtitle>
-            </ion-item>
-           <p class="ion-text-left" > &nbsp; Phone Number</p>
-           <ion-item>
-              <ion-card-subtitle>{{ job.phoneNumber }}</ion-card-subtitle>
-           </ion-item>
-              <p class="ion-text-left" > &nbsp; Location Type</p>
-           <ion-item>
-              <ion-card-subtitle class="ion-padding">{{job.businessType}}</ion-card-subtitle>
-           </ion-item>
-              <p class="ion-text-left" > &nbsp; Address</p>
-            <ion-row>
-              <ion-item>
-              <ion-card-subtitle class="ion-text-center, ion-padding">{{ job.location.address }}</ion-card-subtitle>
-              </ion-item>
-            </ion-row>
-          </div>
-        </ion-card>
-      </ion-card-content>
-
-      <!-- Show the image of the location picked. Clicking on it opens it up to view full screen -->
-        <ion-col size-sm="6" offset-sm="3" class="ion-no-padding">
-          <ion-img role="button" (click)="onShowFullMap()" class="location-image" [src]="job.location.staticMapImageUrl"></ion-img>
-        </ion-col>
+    <!-- Show the image of the location picked. Clicking on it opens it up to view full screen -->
+    <ion-col size-sm="6" offset-sm="3" class="ion-no-padding">
+      <ion-img role="button" (click)="onShowFullMap()" class="location-image" [src]="job.location.staticMapImageUrl"></ion-img>
     </ion-col>
+      
+  <ion-row>
+  <ion-col size-sm="6" offset-sm="3">
+    <ion-card-content>
+      <ion-card>
+        <div class="ion-text-center" *ngIf="isLoading">
+          <ion-spinner color="primary"></ion-spinner>
+        </div>
+               
+        <ion-toolbar><ion-text>Contact Information</ion-text></ion-toolbar>
+        <ion-list>
+          
+          <p class="ion-text-left"> &nbsp; Business Name</p>
+          <ion-item-divider> 
+            <ion-card-subtitle>{{ job.businessName }}</ion-card-subtitle>
+          </ion-item-divider> 
+          
+             
+              
+           
+            <p class="ion-text-left" > &nbsp; Email Address</p>
+            <ion-item-divider>
+           <ion-card-subtitle>{{ job.emailAddress }}</ion-card-subtitle>
+          </ion-item-divider>
+             
+                
+             
+           
+           
+             <p class="ion-text-left" > &nbsp; Phone Number</p>
+             <ion-item-divider>
+            <ion-card-subtitle>{{ job.phoneNumber }}</ion-card-subtitle>
+          </ion-item-divider>
+
+           <p class="ion-text-left" > &nbsp; Location Type</p>
+           <ion-item-divider>
+            <ion-card-subtitle>{{job.businessType}}</ion-card-subtitle>
+          </ion-item-divider>
+           <p class="ion-text-left" > &nbsp; Address</p>
+          
+           <ion-item-divider>
+            <ion-card-subtitle>{{job.location.address}}</ion-card-subtitle>
+          </ion-item-divider> 
+      </ion-list>
+      </ion-card>
+    </ion-card-content>
+  </ion-col>
   </ion-row>
 
-      <!-- Edit button takes you to the job edit screen -->
-      <div style="display: flex; justify-content: center;">
-        <ion-row>
-          <ion-col >
-            <ion-button
-              *ngIf="isAdmin(true)"
-              margin
-              color="primary"
-              [routerLink]="['/', 'places', 'tabs', 'discover', 'edit', job.id]"
-              >Edit</ion-button
-              >
-          </ion-col> 
-        </ion-row>
-      </div> 
+    <div style="display: flex; justify-content: center;">
+      <ion-row>
+        <ion-col >  
+          <ion-button
+            *ngIf="isAdmin(true)"
+            margin
+            color="primary"
+            [routerLink]="['/', 'places', 'tabs', 'offers', 'edit', job.id]"
+            >Edit</ion-button
+            >
+        </ion-col> 
+      </ion-row>
+    </div>
   </ion-grid>
 </ion-content>
     
