--- a/src/app/places/offers/offer-bookings/offer-bookings.page.html
+++ b/src/app/places/offers/offer-bookings/offer-bookings.page.html
@@ -9,7 +9,7 @@
     <!-- ngIf="isAdmin(true)" -->
     <ion-buttons slot="primary" *ngIf="isAdmin(true)">
       <ion-button (click)="onDeleteEmployee(place.id)">
-        <ion-icon name="close-circle-outline" slot="icon-only"></ion-icon>
+        <ion-icon name="trash-outline" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
@@ -17,7 +17,7 @@
 
 <ion-content >
   <ion-grid class="ion-padding" *ngIf="!isLoading">
-    <div >
+    <div class="imageProfile" >
       <ion-row>
       <ion-col size-sm="6" offset-sm="3">
         <ion-img [src]="place.imageUrl"></ion-img>
@@ -34,30 +34,44 @@
         </div>
                
         <ion-toolbar><ion-text>Contact Information</ion-text></ion-toolbar>
-          <p class="ion-text-left" > &nbsp; First Name</p>
-          <ion-item>
-             <ion-card-subtitle>{{ place.firstName }}</ion-card-subtitle>
-          </ion-item> 
-          <p class="ion-text-left" > &nbsp; Last Name</p>
-          <ion-item>
-            <ion-card-subtitle>{{ place.lastName }}</ion-card-subtitle>
-          </ion-item>
-           <p class="ion-text-left" > &nbsp; Phone Number</p>
-           <ion-item>
+        <ion-list>
+          
+          <p class="ion-text-left"> &nbsp; First Name</p>
+          <ion-item-divider> 
+            <ion-card-subtitle>{{ place.firstName }}</ion-card-subtitle>
+          </ion-item-divider> 
+          
+             
+              
+           
+            <p class="ion-text-left" > &nbsp; Last Name</p>
+            <ion-item-divider>
+           <ion-card-subtitle>{{ place.lastName }}</ion-card-subtitle>
+          </ion-item-divider>
+             
+                
+             
+           
+           
+             <p class="ion-text-left" > &nbsp; Phone Number</p>
+             <ion-item-divider>
             <ion-card-subtitle>{{ place.phoneNumber }}</ion-card-subtitle>
-           </ion-item>
+          </ion-item-divider>
+
            <p class="ion-text-left" > &nbsp; Email Address</p>
-           <ion-item>
+           <ion-item-divider>
             <ion-card-subtitle>{{place.emailAddress}}</ion-card-subtitle>
-           </ion-item>
+          </ion-item-divider>
            <p class="ion-text-left" > &nbsp; Job Title</p>
-          <ion-item>
+          
+           <ion-item-divider>
             <ion-card-subtitle>{{place.description}}</ion-card-subtitle>
-          </ion-item>
+          </ion-item-divider>
           <p class="ion-text-left" > &nbsp; Pay Group</p>
-          <ion-item>
+          <ion-item-divider>
             <ion-card-subtitle>{{place.payGroup}}</ion-card-subtitle>
-          </ion-item>
+          </ion-item-divider>  
+      </ion-list>
       </ion-card>
     </ion-card-content>
   </ion-col>
