--- a/src/app/places/offers/offer-bookings/offer-bookings.page.scss
+++ b/src/app/places/offers/offer-bookings/offer-bookings.page.scss
@@ -1,19 +1,30 @@
-ion-img {
-  height: 100px;
+
+.location-image {
+  width: 100%;
+  height: 25rem;
+  max-height: 30vh;
+  object-fit: cover;
+  border: 2px solid var(--ion-color-primary);
 }
 
-ion-card-title {
-  color: rgb(0, 0, 0);
+
+
+ion-img {
+  height: 100px;
 }
 
 p {
   color: var(--ion-color-primary);
 }
 
+
 ion-card-subtitle {
   font-size: 15px;
   text-align: center;
-  color: #000000;
+  color: black;
+  padding: 2px;
+  
+  
 }
 
 ion-text {
@@ -27,6 +38,7 @@ ion-card {
   align-content: center;
   background-color: #dddddd;
   
+  
 }
 
 ion-toolbar {
@@ -37,6 +49,24 @@ ion-header {
   text-align: center;
 }
 
+
+
 ion-card-content {
   text-align: center;
 }
+
+ion-icon {
+  color: red;
+}
+
+
+
+
+
+
+
+
+
+
+
+
