--- a/src/app/places/offers/offers.page.html
+++ b/src/app/places/offers/offers.page.html
@@ -18,11 +18,6 @@
     <ion-row>
       
       <ion-col size="12" size-sm="8" offset-sm="2">
-        
-          
-          <div *ngIf="isLoading" class="ion-text-center">
-            <ion-spinner color="primary" ></ion-spinner>
-          </div>
       
         <div class="ion-text-center" *ngIf="!isLoading && (!loadedPlaces || loadedPlaces.length <= 0)">         
           <p>No employees found. </p>
@@ -62,6 +57,72 @@
           </ion-item-options>
           </ion-item-sliding>
           </ion-list>
+
+          <!-- Skeleton screen -->
+<div *ngIf="isLoading">
+  
+  <ion-list>
+    <ion-list-header>
+      <ion-label>
+        <ion-skeleton-text ></ion-skeleton-text>
+      </ion-label>
+    </ion-list-header>
+    <ion-item>
+      <ion-avatar slot="start">
+        <ion-skeleton-text animated></ion-skeleton-text>
+      </ion-avatar>
+      <ion-label>
+        <h3>
+          <ion-skeleton-text ></ion-skeleton-text>
+        </h3>
+        <p>
+          <ion-skeleton-text animated style="width: 80%"></ion-skeleton-text>
+        </p>
+        
+      </ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-avatar slot="start">
+        <ion-skeleton-text animated></ion-skeleton-text>
+      </ion-avatar>
+      <ion-label>
+        <h3>
+          <ion-skeleton-text animated style="width: 50%"></ion-skeleton-text>
+        </h3>
+        <p>
+          <ion-skeleton-text animated style="width: 80%"></ion-skeleton-text>
+        </p>
+        
+      </ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-avatar slot="start">
+        <ion-skeleton-text animated></ion-skeleton-text>
+      </ion-avatar>
+      <ion-label>
+        <h3>
+          <ion-skeleton-text animated style="width: 50%"></ion-skeleton-text>
+        </h3>
+        <p>
+          <ion-skeleton-text animated style="width: 80%"></ion-skeleton-text>
+        </p>
+      </ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-avatar slot="start">
+        <ion-skeleton-text animated></ion-skeleton-text>
+      </ion-avatar>
+      <ion-label>
+        <h3>
+          <ion-skeleton-text animated style="width: 50%"></ion-skeleton-text>
+        </h3>
+        <p>
+          <ion-skeleton-text animated style="width: 80%"></ion-skeleton-text>
+        </p>
+      </ion-label>
+    </ion-item>
+  </ion-list>
+</div>
       </ion-col>
     </ion-row>
   </ion-grid>
