--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -71,7 +71,7 @@
             size="small" 
             color="primary" 
             fill="outline" 
-            (click)="onAlert()">Forgot Password?</ion-button>
+            (click)="onForgotPassword()">Forgot Password?</ion-button>
           </div>
         </ion-col> 
       </ion-row>
